# dx-memory

./: .dependency-cruiser.cjs  .dependency-cruiser.overfit.cjs  .dockerignore  .env.production.example  .gitignore  .lighthouserc.json  .npmrc  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  .pa11yci.json  .prettierignore  Cargo.toml  README.md  docker-compose.overfit.yml  docker-compose.prod.local.yml  docker-compose.prod.yml  knip.flow.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: signalops-post-edit-dispatch.py  signalops-scope-guard.py
.github/workflows/: flow-ci.yml  friction-ci.yml  metrics.yml  overfit-ci.yml  release.yml
apps/flow-app/: CLAUDE.md  Dockerfile  README.md  package.json  project.json  server.mjs  skills-lock.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
apps/flow-app/scripts/: collect-metrics.mjs
apps/flow-app/src/: env.d.ts  routeTree.gen.ts  router.tsx
apps/friction-api/: .eslintrc.cjs  Dockerfile  README.md  package.json  project.json  tsconfig.json
apps/friction-api/contract/: api-contract.json
apps/friction-api/scripts/: compare-contract-copies.mjs
apps/friction-api/src/: app.module.ts  compare.controller.ts  controllers.spec.ts  dashboard.controller.ts  dataset.spec.ts  dataset.ts  errors.ts  health.controller.ts  helpers.spec.ts  helpers.ts  incidents.controller.ts  main.ts  metrics.controller.ts  signals.controller.ts  signals.service.ts  simulate.controller.ts  types.ts
apps/friction-web/: .eslintrc.cjs  Dockerfile  README.md  index.html  package.json  project.json  tsconfig.json  vite.config.ts
apps/friction-web/contract/: api-contract.json
apps/friction-web/src/: App.tsx  Layout.tsx  api.ts  app.test.tsx  components.test.tsx  components.tsx  constants.ts  helpers.test.ts  helpers.ts  icons.tsx  main.tsx  styles.css  types.ts
apps/lab-web/: index.html  package.json  project.json  tsconfig.json  vite.config.ts
apps/lab-web/src/: main.ts  styles.css
apps/metrics-dashboard/: .oxlintrc.json  README.md  STORYBOARD.md  index.html  package.json  project.json  tsconfig.json  vite.config.ts
apps/metrics-dashboard/src/: App.tsx  data.ts  env.d.ts  styles.css  types.ts
apps/overfit-api/: AGENTS.md  Cargo.toml  Dockerfile  README.md  project.json
apps/overfit-api/.claude/skills/overfit-api-rust-axum/: SKILL.md
apps/overfit-api/.claude/skills/overfit-contract-boundaries/: SKILL.md
apps/overfit-api/src/: bootstrap.rs  main.rs
apps/overfit-api/tests/: api.rs
apps/overfit-web/: AGENTS.md  Dockerfile  README.md  next.config.ts  package.json  project.json  tsconfig.json  vitest.config.ts
apps/overfit-web/app/: css.d.ts  layout.tsx  page.tsx
coverage/: coverage-final.json  index.html
crates/overfit-adapters-fixtures/: Cargo.toml
crates/overfit-adapters-fixtures/src/: datetime.rs  generate.rs  lib.rs  rng.rs
crates/overfit-adapters-http/: Cargo.toml
crates/overfit-adapters-http/src/: lib.rs
crates/overfit-application/: Cargo.toml
crates/overfit-application/src/: lib.rs  pipeline.rs
crates/overfit-audit/: Cargo.toml
crates/overfit-audit/src/: lib.rs
crates/overfit-commands/: Cargo.toml
crates/overfit-commands/src/: lib.rs
crates/overfit-contracts/: Cargo.toml
crates/overfit-contracts/src/: entities.rs  error.rs  lib.rs  pagination.rs  query.rs  views.rs
crates/overfit-domain/: Cargo.toml
crates/overfit-domain/src/: aggregates.rs  entities.rs  enums.rs  events.rs  ids.rs  lib.rs  validation.rs  value_objects.rs
crates/overfit-event-store/: Cargo.toml
crates/overfit-event-store/src/: lib.rs
crates/overfit-events/: Cargo.toml
crates/overfit-events/src/: lib.rs
crates/overfit-feature-flags/: Cargo.toml
crates/overfit-feature-flags/src/: lib.rs
crates/overfit-observability/: Cargo.toml
crates/overfit-observability/src/: clock.rs  lib.rs
crates/overfit-policies/: Cargo.toml
crates/overfit-policies/src/: lib.rs
crates/overfit-queries/: Cargo.toml
crates/overfit-queries/src/: lib.rs
crates/overfit-read-models/: Cargo.toml
crates/overfit-read-models/src/: compare.rs  dashboard.rs  datetime.rs  dx_metrics.rs  incidents.rs  lib.rs  signals.rs  wire.rs
crates/overfit-repositories/: Cargo.toml
crates/overfit-repositories/src/: lib.rs
crates/overfit-schema-registry/: Cargo.toml
crates/overfit-schema-registry/src/: lib.rs
crates/overfit-test-support/: Cargo.toml
crates/overfit-test-support/src/: lib.rs
docker/flow/: README.md
docker/friction/: README.md  docker-compose.yml
docker/overfit/: README.md
docs/: results-log.md
docs/agents/: signalops-agent-scopes.md
docs/audit/flow/: README.md  a11y-debug-report.md  accessibility-report.md  ai-governance-report.md  (+33 more)
docs/deployment/: PRODUCTION.md
docs/engineering/: 00-repo-overview.md  01-local-setup.md  02-shared-contracts.md  03-fixtures.md  04-metrics.md  05-ci-strategy.md  06-next-steps.md
docs/flow/: README.md  ai-governance.md  architecture.md  debugging-and-ops.md  local-development.md  quality-gates.md
docs/friction/: notes.md
docs/overfit/: IMPLEMENTATION_REPORT.md  README.md
docs/product/: 00-product-contract.md  01-design-spec.md  02-measurement-protocol.md  03-ai-task-protocol.md  04-base-implementation-prompt.md
infra/docker/: friction-api.Dockerfile  friction-web.Dockerfile  friction-web.nginx.conf
infra/gateway/: Dockerfile  nginx.conf  write-release-json.mjs
maquettes/: SignalOps-UI-Spec.md  SignalOps.dc.html
scripts/: smoke-prod.mjs  validate-compose-prod.mjs
scripts/flow/: a11y.mjs  ai-pr-check.mjs  ci-scope-guard.mjs  ci.mjs  doctor.mjs  onboard.mjs
scripts/release/: dokploy.mjs  dokploy.test.mjs  validate-images.mjs
tools/metrics/: README.md  bench-truth-pack.mjs  collect-variant.mjs  collect.mjs  explain-score.mjs  leave-one-out.mjs  score.mjs  sensitivity.mjs  structure-snapshot.mjs  verify-summary.mjs
tools/overfit-ci/: README.md  artifact-manifest.mjs  cache-key.mjs  scope-manifest.json  verify-isolation.mjs
(+182 files in other folders)
