[package]
name = "overfit-adapters-http"
description = "SignalOps Overfit — the HTTP adapter: Axum router, handlers, query extraction and ApiError mapping. Wraps the application layer; owns no domain logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
overfit-application = { workspace = true }
overfit-contracts = { workspace = true }
overfit-read-models = { workspace = true }
