[package]
name = "overfit-audit"
description = "SignalOps Overfit — in-memory audit trail with field redaction, exposed at /api/audit-events."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
overfit-observability = { workspace = true }
