[package]
name = "overfit-commands"
description = "SignalOps Overfit — the command side of CQRS: command types, validation, handler traits, the simulate-error command and the create-audit-event command."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
overfit-domain = { workspace = true }
overfit-events = { workspace = true }
