[package]
name = "overfit-contracts"
description = "SignalOps Overfit — transport DTOs, the ApiError envelope, pagination/filter/sort types and domain->DTO mappers. The camelCase wire shape lives here, separate from the domain."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
overfit-domain = { workspace = true }

[dev-dependencies]
