[package]
name = "overfit-queries"
description = "SignalOps Overfit — the query side of CQRS: typed queries and handlers that read through repository ports and project via read models."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
overfit-domain = { workspace = true }
overfit-contracts = { workspace = true }
overfit-read-models = { workspace = true }
overfit-repositories = { workspace = true }
