[package]
name = "overfit-read-models"
description = "SignalOps Overfit — read models and projectors. Filters/sorts/paginates signals and precomputes the dashboard, compare and DX-metrics views as transport DTOs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
overfit-domain = { workspace = true }
overfit-contracts = { workspace = true }
