[package]
name = "overfit-schema-registry"
description = "SignalOps Overfit — an in-process schema/route registry: every endpoint's request/response schema name, version and owning feature, exposed at /api/schema-registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
